apps/base/kube-prometheus-stack/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: metrics
  name: metrics
