apps/base/kube-prometheus-stack/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-prometheus
  namespace: metrics
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`grafana.localhost`)
      kind: Rule
      middlewares:
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
          scheme: http
    - match: Host(`prometheus.localhost`)
      kind: Rule
      middlewares:
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
          scheme: http
